deployments/kubernetes/ingress/pay-gateway-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pay-gateway-grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: pay-gateway-grpc.pjoc.pub
      http:
        paths:
          - path: /
            backend:
              serviceName: pay-gateway
              servicePort: "grpc"
          - path: /v1/web/
            backend:
              serviceName: pay-gateway
              servicePort: "web"
