deployments/kubernetes/ingress/pay-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pay-gateway
spec:
  rules:
    - host: pay-gateway.pjoc.pub
      http:
        paths:
          - path: /
            backend:
              serviceName: pay-gateway
              servicePort: "grpc-gateway"
          - path: /v1/web/
            backend:
              serviceName: pay-gateway
              servicePort: "web"
